# todo-list

./: .env.example  .gitignore  README.md  api_main.py  main.py  postman_collection.json  pyproject.toml  scheduler_main.py
alembic/: env.py
alembic/versions/: 652a65338178_initial_migration.py
infra/: docker-compose.yml
src/todo/: factory.py
src/todo/api/: __init__.py  app.py  dependencies.py  exception_handlers.py  routers.py
src/todo/api/controller_schemas/: __init__.py  models.py
src/todo/api/controllers/: __init__.py  health_controller.py  projects_controller.py  tasks_controller.py
src/todo/cli/: __init__.py  interface.py
src/todo/commands/: __init__.py  autoclose_overdue.py  scheduler.py
src/todo/config/: settings.py
src/todo/db/: __init__.py  session.py
src/todo/exceptions/: __init__.py  base.py  repository.py  service.py
src/todo/models/: __init__.py  project.py  project_orm.py  task.py  task_orm.py
src/todo/repositories/: __init__.py  interfaces.py  project_repository.py  task_repository.py
src/todo/services/: __init__.py  todo_manager.py
