[tool.poetry]
package-mode = false

[project]
package-mode = false
name = "TodoList"
version = "0.1.0"
description = "A command-line ToDo List application with project and task management"
authors = [
    {name = "Aliakbar Golestani",email = "aliakbar.gls@aut.ac.ir"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)"
]

[project.scripts]
todo = "main:main"
